--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,18 @@
 name: app_review
 description: Request and Write Reviews and Open Store Listing for Android and iOS in Flutter.
-version: 2.1.2+1
+version: 2.2.0
 maintainer: Rody Davis (@rodydavis)
 homepage: https://github.com/rodydavis/plugins
 repository: https://github.com/fluttercommunity/app_review
 
 environment:
-  sdk: '>=2.12.0-259.8.beta <3.0.0'
+  sdk: ">=2.16.0 <3.0.0"
   flutter: ^1.10.0
 
 dependencies:
-  http: ^0.13.0-nullsafety.0
-  package_info_plus: ^1.0.0
-  url_launcher: ^6.0.0-nullsafety.6
+  http: ^0.13.5
+  package_info_plus: ^3.0.0
+  url_launcher: ^6.1.6
   flutter:
     sdk: flutter
 
